# etp-node-template

./: README.md
cli/: Cargo.toml
cli/src/: browser.rs  cli.rs  lib.rs
cli/src/command/: config.rs  mod.rs
node/: Cargo.toml
pallets/template/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: impls.rs  lib.rs
runtime/dna/: Cargo.toml  dna_types.json  polkadot_compatible_types.json
runtime/dna/src/: constants.rs  lib.rs
runtime/src/: constants.rs  lib.rs
service/: Cargo.toml
service/res/: crab_claims_list.json
service/src/: chain_spec.rs  lib.rs
src/: main.rs
