[package]
name = "dna-primitives"
version = "0.6.0"
authors = ["DNA Network <hello@dna.network>"]
description = "DNA node runtime primitives"
edition = "2020"
license = "GPL-3.0"
homepage = "https://dna.network/"
repository = "https://github.com/DNA-network/DNA/"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
# substrate primitives
sp-application-crypto = { default-features = false, git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sp-core = { default-features = false, git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sp-runtime = { default-features = false, git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
# substrate frame
frame-system = { default-features = false, git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }

[features]
default = ["std"]
std = [
	# crates
	"codec/std",
	# substrate primitives
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	# substrate frame
	"frame-system/std",
]
