[package]
name = "DNA-rpc"
version = "0.6.0"
authors = ["DNA Network <hello@DNA.network>"]
description = "DNA node rpc"
edition = "2018"
license = "GPL-3.0"
homepage = "https://DNA.network/"
repository = "https://github.com/DNA-network/DNA/"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
jsonrpc-core = { version = "14.0.5" }
# substrate primitives
sp-api = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sp-blockchain = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sp-consensus = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sp-consensus-babe = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sp-transaction-pool = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
# DNA primitives
DNA-primitives = { path = "../primitives" }
# substrate frame
pallet-transaction-payment-rpc = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
substrate-frame-rpc-system = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
# DNA frame
DNA-balances-rpc = { git = "https://github.com/DNA-network/DNA-common.git", branch = "DNA-master" }
DNA-staking-rpc = { git = "https://github.com/DNA-network/DNA-common.git", branch = "DNA-master" }
# substrate client
sc-client-api = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sc-consensus-babe = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sc-consensus-babe-rpc = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sc-consensus-epochs = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sc-finality-grandpa = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sc-finality-grandpa-rpc = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sc-keystore = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sc-rpc = { git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
