[package]
name = "DNA-runtime-common"
version = "0.6.0"
authors = ["DNA Network <hello@DNA.network>"]
description = "DNA node runtime common"
edition = "2018"
license = "GPL-3.0"
homepage = "https://DNA.network/"
repository = "https://github.com/DNA-network/DNA/"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
# substrate primitives
sp-runtime = { default-features = false, git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
sp-std = { default-features = false, git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
# DNA primitives
DNA-primitives = { default-features = false, path = "../../primitives" }
# substrate frame
frame-support = { default-features = false, git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
frame-system = { default-features = false, git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
pallet-authorship = { default-features = false, git = "https://github.com/DNA-network/substrate.git", tag = "v2.0.0-alpha.DNA.8" }
# DNA frame
DNA-balances = { default-features = false, git = "https://github.com/DNA-network/DNA-common.git", branch = "DNA-master" }
DNA-staking = { default-features = false, git = "https://github.com/DNA-network/DNA-common.git", branch = "DNA-master" }
DNA-support = { default-features = false, git = "https://github.com/DNA-network/DNA-common.git", branch = "DNA-master" }

[features]
default = ["std"]
no_std = []
std = [
	# crates
	"codec/std",
	# substrate primitives
	"sp-runtime/std",
	"sp-std/std",
	# DNA primitives
	"DNA-primitives/std",
	# substrate frame
	"frame-support/std",
	"frame-system/std",
	"pallet-authorship/std",
	# DNA frame
	"DNA-balances/std",
	"DNA-staking/std",
	"DNA-support/std",
]
# TODO: benchmark
# runtime-benchmarks = []
